Fix nav item alignment on small screens

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -35,4 +35,5 @@
   justify-content: center;
   height: 100%;
   text-decoration: none;
+  text-align: center;
 }
